# ChangeLog for app-misc/cldg-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldg-meta-10.3.92.ebuild:
  Added net-p2p/linuxdcpp.

  04 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldg-meta-10.0.ebuild, +metadata.xml:
  Change clsg-themes to cldg-themes.
