@@ -1,4 +1,3 @@
-EBUILD cldg-meta-10.3.91.ebuild 4095 RMD160 803e79cc6412e5a2d53fb44eab4ffd7d2ac0d904 SHA1 09841d4d1379a57879a9552c35d0af7ddd6f2ddb SHA256 fa7a0d69cb761d57dcfb05210d687c5ad69818010be9bbe6ac91902de9a37508
-EBUILD cldg-meta-10.3.92.ebuild 5085 RMD160 6132608ae2afb6ab92d2a4a3e0123ebfee8e047d SHA1 f8d77f3c84be43e2b930b328f1ce2a33f8c3b86d SHA256 bb212ba39a198b0eed288d460feb57e02d5c8501ab12cce2b2c332510f002b52
-MISC ChangeLog 377 RMD160 cfc3dc3574dafea3343fdc70c404a11a1d3ece1e SHA1 fb1e33182f8dc4c4d60317ac04ffdffbfcbca09b SHA256 6b1278cfdb3c050eb2cb735ec9cbd72a79a58c655fb7dabd141a5f4c0fec580d
+EBUILD cldg-meta-10.3.91.ebuild 5085 RMD160 6132608ae2afb6ab92d2a4a3e0123ebfee8e047d SHA1 f8d77f3c84be43e2b930b328f1ce2a33f8c3b86d SHA256 bb212ba39a198b0eed288d460feb57e02d5c8501ab12cce2b2c332510f002b52
+MISC ChangeLog 593 RMD160 918fc25e15467b8c372663024cba0f96121fc34f SHA1 b7d692a9217796e7711e2871fd6e5dbc70348b90 SHA256 24374d386af832d15aa571224270b035044e158decf8e22aff058d0bd59880a0
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
