@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Apr 2010; Трацевский Александр
+  <atratsevskiy@gentoo.org> cldg-meta-10.3.91.ebuild,
+  -cldg-meta-10.3.92.ebuild:
+  Package cldg-meta-10.3.92.ebuild association with cldg-meta-10.3.91.ebuild
+
   31 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cldg-meta-10.3.92.ebuild:
   Added net-p2p/linuxdcpp.
